--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,94 +1,140 @@
-@media (min-width: 658px) {
-  .container-cards .card{
-    max-width: 350px;
-  }
-  .new-collection .container-cards.grid {
-    grid-template-columns: repeat(3, 1fr);
-  }
-  .new-collection .container-cards.grid .card:nth-child(1) {
-    grid-column: 1 / -1;
-    grid-row: 1 / 2;
-  }
-  .new-collection .container-cards.grid .card:nth-child(2) {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-  }
-  .new-collection .container-cards.grid .card:nth-child(3) {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-  }
-  .new-collection .container-cards.grid .card:nth-child(4) {
-    grid-column: 3 / 4;
-    grid-row: 2 / 4;
+@media (max-width: 868px){
+  .container-cards .card {
+    width: calc(100% / 2 - 50px);
   }
 }
-@media (min-width: 800px) {
-
+@media (max-width: 800px) {
   header {
-    justify-content: initial;
+    justify-content: space-between;
   }
-  header .menu {
-    display: none;
+    header .menu {
+      display: block;
+  }
+  
+  header nav {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    flex-direction: column;
+    background: #fff;
+    top: 0;
+    left: -100%;
+    text-align: left;
+  }
+  header nav form {
+    width: 80%;
+    margin: .5rem 0;
   }
   header nav a {
     color: #000;
-    margin: 0 0 0 1.6rem;
+    margin: .5rem 0;
   }
-  header nav {
-    position: inherit;
-    width: auto;
-    height: 100%;
-    flex-direction: row;
-    align-items: center;
-    margin-left: auto;
-    margin-right: 1rem;
+  header nav form input[type="text"] {
+    margin-left: 0;
+    width: 100%;
   }
-  .home {
+    .home {
+      flex-direction: row-reverse;
+      justify-content: space-evenly;
+      align-items: center;
+      margin-top: 0;
+      padding-top: 0;
+      height: 70vh;
+    }
+    .home .img-home {
+      width: 15.5rem;
+      height: 15.5rem;
+      margin: 0;
+    }
+  
+  
+  }
+  @media (max-width: 765px){
+    .home .img-home {
+      width: 14rem;
+      height: 14rem;
+  }
+    .home {
+      flex-direction: column;
+  }
+    .home .text-home {
+      padding: 0 0.7rem;
+      margin: 0 auto 0 2rem;
+  }
+  }
+  
+@media (max-width: 633px) {
+  .new-collection .container-cards.grid{
+    grid-template-columns: repeat(6, 1fr);
+  }
+  .new-collection .container-cards.grid .card:nth-child(1) {
+    grid-column: 1 / -1;
+    grid-row: 1 / 1;
+    width: 100%;
+    max-width: 100%;
     flex-direction: row-reverse;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 0;
-    padding-top: 0;
-    height: 70vh;
+}
+.card-img {
+  margin: 1.5rem 1rem;
+}
+.new-collection .container-cards.grid .card:nth-child(2) {
+  grid-column: 1 / 4;
+  grid-row: 2 / 2;
+  width: 100%;
+  max-width: 100%;
+}
+.new-collection .container-cards.grid .card:nth-child(3) {
+  grid-column: 4 / -1;
+  grid-row: 2 / 3;
+  width: 100%;
+  max-width: 100%;
+}
+.new-collection .container-cards.grid .card:nth-child(4) {
+  grid-column: 1 / -1;
+  grid-row: 3 / 4;
+  width: 100%;
+  max-width: 100%;
+}
+}
+@media (max-width: 584px){
+  .container-cards .card {
+    width: 65%;
   }
-  .home .img-home {
-    width: 15.5rem;
-    height: 15.5rem;
-    margin: 0;
+}
+@media (max-width: 458px){
+  .container-cards .card {
+    width: 85%;
   }
+}
 
-  .new-collection .container-cards.grid {
-    grid-template-columns: repeat(5, 1fr);
+@media (max-width: 583px) {
+  .new-collection .container-cards.grid .card:nth-child(1) {
+    flex-direction: column;
+}
+  .new-collection .container-cards.grid{
+    display: flex;
+  }
+  .footer{
+    flex-wrap: wrap;
+  }
+  .footer > div {
+    width: calc(100% / 3 - 60px);
+}
+}
+@media (max-width: 461px) {
+
+  .footer > div {
     width: 75%;
 }
-  .new-collection .container-cards.grid .card:nth-child(1) {
-    grid-column: 1 / 4;
-    grid-row: 1 / 4;
-    width: 100%;
-    max-width: 100%;
-  }
-  .new-collection .container-cards.grid .card:nth-child(2) {
-    grid-column: 4 / -1;
-    grid-row: 1 / 2;
-    width: 100%;
-    max-width: 100%;
-  }
-  .new-collection .container-cards.grid .card:nth-child(3) {
-    grid-column: 4 / -1;
-
-    grid-row: 2 / 3;
-    width: 100%;
-    max-width: 100%;
-  }
-  .new-collection .container-cards.grid .card:nth-child(4) {
-    grid-column: 4 / -1;
-    grid-row: 3 / 4;
-    width: 100%;
-    max-width: 100%;
-  }
 }
-@media (min-width: 998px) {
-  .container-cards .card {
-    max-width: calc(100% / 3 - 50px);
-  }
+@media (max-width: 360px) {
+  .home .img-home {
+    width: 11rem;
+    height: 11rem;
+}
+  .home .text-home {
+    padding: 0 0.7rem;
+    margin: 0;
+    width: 80%;
+}
 }
