--- a/assets/css/styles-recycling.css
+++ b/assets/css/styles-recycling.css
@@ -46,9 +46,7 @@ img {
   margin: auto;
 }
 .container-cards .card {
-  width: 100%;
-  min-width: 250px;
-  max-width: 75%;
+  width: calc(100% / 3 - 50px);
   background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
@@ -56,7 +54,7 @@ img {
   align-items: center;
   text-align: center;
   border-radius: 0.2rem;
-  margin: 20px auto;
+  margin: 25px auto;
   position: relative;
   padding: 1rem 0;
 }
@@ -67,7 +65,15 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.add button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 1rem auto;
+  background-color: none;
+  border: none;
+  cursor: pointer;
 }
 .add i {
   display: flex;
@@ -137,6 +143,12 @@ header nav {
   flex-direction: column;
   transition: all 1s;
 }
+header nav .closed {
+  position: absolute;
+  top: 10px;
+  left: 50px;
+  font-size: 1.3rem;
+}
 header nav form {
   position: relative;
 }
@@ -181,7 +193,23 @@ header nav a.active::before {
   left: 10%;
   animation: scale 1.1s linear;
 }
+header {
+  justify-content: initial;
+}
 
+header nav a {
+  color: #000;
+  margin: 0 0 0 1.6rem;
+}
+header nav {
+  position: inherit;
+  width: auto;
+  height: 100%;
+  flex-direction: row;
+  align-items: center;
+  margin-left: auto;
+  margin-right: 1rem;
+}
 @keyframes scale {
   from {
     transform: scale(0);
@@ -238,11 +266,19 @@ header .menu-collapse-user i {
    width: 0.875rem;
    margin-left: .5rem;
 } */
+footer{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1rem;
+}
 .roby,
 .explore,
 .suport {
   display: flex;
   flex-direction: column;
+}
+.footer > div{
+margin: 0 30px;
 }
 .footer div a {
   margin-bottom: 1rem;
@@ -254,7 +290,6 @@ header .menu-collapse-user i {
   font-weight: 400;
 }
 .footer .social {
-  width: 50%;
   display: flex;
   justify-content: space-between;
 }
